--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Permanent+Marker&family=Rubik+Moonrocks&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -11,6 +13,7 @@ nav a{
     text-align: center;
     color: black;
     text-decoration: none;
+    padding: 35px;
 }
 
 #hero-msg{
@@ -18,6 +21,11 @@ nav a{
 }
 h1{
     text-align: center;
+}
+h2{
+    font-family: "Rubik Moonrocks", Helvetica, sans-serif;
+    margin: 0;
+
 }
 #hero-msg{
     text-align: center;
@@ -41,6 +49,9 @@ section{
 }
 body{
     background-color: azure;
+    font-size:22px;
+    margin: 0;
+    padding: 0;
 }
 header{
     background-color: #AEC3B0;
@@ -50,30 +61,44 @@ a:hover{
     color:black;
 }
 .book, .join{
-    background-color:azure;
-    color:black;
+    background-color:darkcyan;
+    color: white;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover{
-    background-color:darkcyan;
-    color: white
+    background-color:azure;
+    color:black;
 }
 
 .msg{
-    color:black
+    color:black;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer{
     background-color: #EFF6E0;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 .home-title{
     color:#124559;
+    font-family: "Permanent Marker", "Nanum Gothic", sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 .msg h2{
     color:#124559;
+    font-family: "Permanent Marker", "Nanum Gothic", sans-serif;
 }
 .msg p{
     color:black;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer h3{
     color:black;
@@ -88,6 +113,7 @@ footer a:hover{
 }
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 .logo{
     width: 250px;
@@ -101,3 +127,18 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 }    
+#logo_link{
+    padding-top: 5px;
+}
+footer .social img {
+    padding-top: 15px;
+}  
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+.card-img{
+    border: 10px solid black;
+}
+main section img {
+    box-sizing: border-box;
+}
