--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -6,7 +6,9 @@
 }
 nav {
     text-align: center;
-    background-color:#AEC3B0
+    background-color:#AEC3B0;
+    display: flex;
+    justify-content: space-around;
     
 }
 nav a{
@@ -29,10 +31,14 @@ h2{
 }
 #hero-msg{
     text-align: center;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+
 }
 h4{
     text-align: center;
-    color:#124559
+    color:white;
 }
 .button-box{
     text-align: center;
@@ -46,6 +52,8 @@ section{
 #background {
     height: 725px;
     background-color: #EFF6E0;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body{
     background-color: azure;
@@ -55,6 +63,8 @@ body{
 }
 header{
     background-color: #AEC3B0;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 a:hover{
     background-color: white;
@@ -79,14 +89,21 @@ a:hover{
     color:black;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+
 }
 footer{
     background-color: #EFF6E0;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .home-title{
-    color:#124559;
+    color:white;
     font-family: "Permanent Marker", "Nanum Gothic", sans-serif;
     font-size: 2em;
     margin-top: 10px;
@@ -129,6 +146,9 @@ footer p a:hover {
 }    
 #logo_link{
     padding-top: 5px;
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 footer .social img {
     padding-top: 15px;
@@ -138,7 +158,96 @@ footer .social img {
 }
 .card-img{
     border: 10px solid black;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 main section img {
     box-sizing: border-box;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+
+}
+.card-img, .mountains {
+    width: 100%;
+}
+
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+      
