--- a/recipes/styles/style.css
+++ b/recipes/styles/style.css
@@ -13,17 +13,27 @@ nav {
 }
 #sweet{
     grid-column: 1/2;
+    text-align: center;
     font-size: 50px;
     color: #FAEADE;
+    margin-top: 200px;
+
+}
+#sweet:hover, #savory:hover{
+    background-color: #FAEADE;
+    color: #b46229;
 }
 #savory{
     grid-column: 3/4;
     font-size: 50px;
     color: #FAEADE;
+    margin-top: 200px;
+    text-align: center;
+
 }
 #logo{
-    width: 200px;
-    height: 200px;
+    width: 50px;
+    height: 50px;
 }
 #explanation{
     display: grid;
@@ -36,11 +46,13 @@ nav {
     grid-column: 1/2;
     width: 400px;
     height: 400px;
+    padding-left: 100px;
 }
 #explanation-msg{
     grid-column: 2/3;
     block-size: fit-content;
     width: fit-content;
+    padding-right: 50px;
 }
 .explanation-title{
     font-family: "bangers";
@@ -65,10 +77,12 @@ nav {
     grid-column: 2/3;
     width: 100%;
     height: 80%;
+    padding: 25px;
 }
 .products{
     grid-column: 3/4;
     text-align: center;
+    padding-left: 50px;
 
 }
 .tips h2{
@@ -78,6 +92,7 @@ nav {
 .tips ul{
     font-family: "Fuzzy Bubbles";
     font-size: 20px;
+    text-align: left;
 }
 .products h2{
     font-family: "bangers";
@@ -86,7 +101,58 @@ nav {
 .products ul{
     font-family: "Fuzzy Bubbles";
     font-size: 20px;
+    text-align: left;
 }
 footer{
     background-color: #b46229;
 }
+#explanation-sub{
+    background-color: #FAEADE;
+}
+.recipe-grid{
+    background-color: #FAEADE;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+}
+.recipe-grid h2{
+    font-family: "bangers";
+}
+.recipe-grid ul{
+    font-family: "fuzzy bubbles";
+}
+.cheesecake-img{
+    grid-column: 1/2;
+    grid-row:1/2
+}
+.cheesecake-name {
+    grid-column: 3/6;
+    grid-row:1/2;
+}
+.cheesecake-directions{
+    grid-row:1/2;
+    grid-column: 4/6;
+}
+.cheesecake-ingredients{
+    grid-column: 2/4;
+    grid-row:1/2;
+    padding-top: 40px;
+}
+.cookie-cake-img{
+    grid-column: 1/2;
+    grid-row:2/3;
+}
+.cookie-cake-name {
+    grid-column: 3/6;
+    grid-row:2/3;
+}
+.cookie-cake-directions{
+    grid-row:2/3;
+    grid-column: 4/6;
+}
+.cookie-cake-ingredients{
+    grid-column: 2/4;
+    grid-row:2/3;
+    padding-top: 40px;
+}
+
