--- a/recipes/styles/style.css
+++ b/recipes/styles/style.css
@@ -105,54 +105,170 @@ nav {
 }
 footer{
     background-color: #b46229;
+    padding: 0%;
+    margin: 0%;
+    overflow-x: hidden;
 }
 #explanation-sub{
     background-color: #FAEADE;
+    font-family: "bangers";
+    text-align: center;
+    font-size: 30px;
+    width: 100%;
+    height: 100%;
+    padding: 0%;
+    margin: 0%;
+    overflow-x: hidden;
 }
 .recipe-grid{
     background-color: #FAEADE;
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 16% 16% 30% 22% 16%;
 }
 .recipe-grid h2{
     font-family: "bangers";
 }
-.recipe-grid ul{
+.recipe-grid ul, .recipe-grid ol{
     font-family: "fuzzy bubbles";
 }
+
 .cheesecake-img{
     grid-column: 1/2;
-    grid-row:1/2
+    grid-row:1/2;
+    padding-top: 70px;
+    width: 375px;
+    height: 450px;
+    padding-left: 40px;
 }
 .cheesecake-name {
-    grid-column: 3/6;
+    grid-column: 2/4;
     grid-row:1/2;
+    padding-top: 50px;
+    padding-left: 40px;
+
 }
 .cheesecake-directions{
     grid-row:1/2;
     grid-column: 4/6;
+    padding-top: 90px;
+    padding-right: 70px;
 }
 .cheesecake-ingredients{
     grid-column: 2/4;
     grid-row:1/2;
-    padding-top: 40px;
+    padding-top: 90px;
+    padding-left: 70px;
+
 }
 .cookie-cake-img{
-    grid-column: 1/2;
+    grid-column: 5/6;
     grid-row:2/3;
+    width: 375px;
+    height: 450px;
+    padding-top: 50px;
+    padding-right: 60px;
+
 }
 .cookie-cake-name {
-    grid-column: 3/6;
+    grid-column: 3/5;
     grid-row:2/3;
+    padding-left: 60px;
+    padding-top: 40px;
 }
 .cookie-cake-directions{
     grid-row:2/3;
-    grid-column: 4/6;
+    grid-column: 1/3;
+    padding-top: 90px;
+
 }
 .cookie-cake-ingredients{
-    grid-column: 2/4;
+    grid-column: 3/5;
     grid-row:2/3;
-    padding-top: 40px;
+    padding-top: 90px;
+    padding-left: 50px;
 }
 
+.lemon-blueberry-img{
+    grid-column: 1/2;
+    grid-row: 3/4;
+    width: 375px;
+    height: 475px;
+    padding-top: 70px;
+    padding-left: 20px;
+}
+.lemon-blueberry-name{
+    grid-column:2/4;
+    grid-row: 3/4;
+    padding-top: 20px;
+    padding-left: 40px;
+
+}
+.lemon-blueberry-ingredients{
+    grid-column: 2/4;
+    grid-row: 3/4;
+    padding-top: 70px;
+    padding-left: 20px;
+}
+.lemon-blueberry-directions{
+    grid-column: 3/6;
+    grid-row: 3/4;
+    padding-top: 70px;
+    padding-left: 180px;
+}
+.pecan-ring-img{
+    grid-column: 5/6;
+    grid-row: 4/5;
+    width: 375px;
+    height: 450px;
+    padding-top: 60px;
+
+}
+.pecan-ring-name{
+    grid-column: 3/5;
+    grid-row: 4/5;
+    padding-left: 60px;
+    padding-top: 20px;
+
+}
+.pecan-ring-ingredients{
+    grid-column: 3/5;
+    grid-row: 4/5;
+    padding-top: 70px;
+    padding-left: 60px;
+
+}
+.pecan-ring-directions{
+    grid-row: 4/5;
+    grid-column: 1/3;
+    padding-top: 50px;
+    padding-right: 40px;
+
+}
+.pumpkin-img{
+    grid-row: 5/6;
+    grid-column: 1/2;
+    width: 375px;
+    height: 450px;
+    padding-top: 30px;
+    padding-left: 20px;
+}
+.pumpkin-name{
+    grid-row: 5/6;
+    grid-column: 2/4;
+    padding-top: 50px;
+    padding-left: 20px;
+
+}
+.pumpkin-ingredients{
+    grid-row: 5/6;
+    grid-column: 2/4;
+    padding-top: 100px;
+
+}
+.pumpkin-directions{
+    grid-row: 5/6;
+    grid-column: 4/6;
+    padding-top: 100px;
+
+}
