--- a/recipes/styles/style.css
+++ b/recipes/styles/style.css
@@ -128,6 +128,7 @@ footer{
 }
 .recipe-grid h2{
     font-family: "bangers";
+        color: #d16229;
 }
 .recipe-grid ul, .recipe-grid ol{
     font-family: "fuzzy bubbles";
