--- a/recipes/styles/style.css
+++ b/recipes/styles/style.css
@@ -383,7 +383,7 @@ footer{
     padding-left: 20px;
 
 }
-.pumpkin-ingredientss{
+.pumpkin-ingredients{
     grid-row: 5/6;
     grid-column: 2/4;
     padding-top: 100px;
